<resources>
    <string name="app_name">Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_note">Create Note</string>
    <string name="view_notes">View Notes</string>
    <string name="view_notes_fragment">view notes fragment</string>
    <string name="note_title">Title… e.g. shopping list</string>
    <string name="note_contents">Contents.. e.g. bread + milk</string>
    <string name="when_should_this_note_be_completed">Estimated date of completion</string>
    <string name="add_note_image">Add Note Image</string>
    <string name="create_a_note">Create a note</string>
    <string name="created_at">Created at:</string>
    <string name="complete_by">Complete By:</string>
    <string name="remove_all_notes">Remove all notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="channel_name">notes app note due notification</string>
    <string name="channel_description">Reminder/notification for due date of note approaching</string>
</resources>